force-app/main/default/objects/Country__c/fields/A2Code__c.field-meta.xml
<CustomField>
    <fullName>A2Code__c</fullName>
    <description>Country code according to ISO A2 codes for countries</description>
    <externalId>true</externalId>
    <inlineHelpText>Country code according to ISO A2 codes for countries</inlineHelpText>
    <label>A2 Code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>