force-app/main/default/objects/Country__c/fields/A3Code__c.field-meta.xml
<CustomField>
    <fullName>A3Code__c</fullName>
    <description>Country code according to ISO A3 codes for countries.</description>
    <externalId>true</externalId>
    <inlineHelpText>Country code according to ISO A3 codes for countries.</inlineHelpText>
    <label>A3 Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>