force-app/main/default/objects/Country__c/fields/NumCode__c.field-meta.xml
<CustomField>
    <fullName>NumCode__c</fullName>
    <description>Country code according to ISO numeric codes for countries.</description>
    <externalId>true</externalId>
    <inlineHelpText>Country code according to ISO numeric codes for countries.</inlineHelpText>
    <label>Numeric Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>