force-app/main/default/objects/Country__c/fields/PhoneCode__c.field-meta.xml
<CustomField>
    <fullName>PhoneCode__c</fullName>
    <label>Phone Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>