force-app/main/default/objects/Country__c/fields/SubRegion__c.field-meta.xml
<CustomField>
    <fullName>SubRegion__c</fullName>
    <label>Sub Region</label>
    <length>40</length>
    <type>Text</type>
</CustomField>