force-app/main/default/objects/Country__c/fields/SysName__c.field-meta.xml
<CustomField>
    <fullName>SysName__c</fullName>
    <label>System Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>