force-app/main/default/objects/Country__c/fields/UnderSanctions__c.field-meta.xml
<CustomField>
    <fullName>UnderSanctions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Sanctions</label>
    <type>Checkbox</type>
</CustomField>