force-app/main/default/objects/Country__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>A2Code__c</columns>
    <columns>A3Code__c</columns>
    <columns>NAME</columns>
    <columns>SysName__c</columns>
    <columns>Market_Segment__c</columns>
    <columns>Region__c</columns>
    <columns>PhoneCode__c</columns>
    <columns>ID_ERP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>